[gd_scene load_steps=9 format=3 uid="uid://cunve575cu724"]

[ext_resource type="Script" path="res://scenes/enemies/ParaProjectile.gd" id="1_5fvgx"]
[ext_resource type="Texture2D" uid="uid://qsiqih1v3rwv" path="res://images/para_projectile.png" id="1_o4um0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v0dnl"]
atlas = ExtResource("1_o4um0")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l386"]
atlas = ExtResource("1_o4um0")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_57mxe"]
atlas = ExtResource("1_o4um0")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fko4"]
atlas = ExtResource("1_o4um0")
region = Rect2(8, 8, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_igv22"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0dnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l386")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57mxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fko4")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ls2bp"]
radius = 5.0

[node name="ParaProjectile" type="Area2D"]
z_index = 100
collision_layer = 8
collision_mask = 67
script = ExtResource("1_5fvgx")
speed = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_igv22")
frame_progress = 0.687125

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ls2bp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
